add additional release of parent reference to twitchy destruction code. fixes bug 16310. r:pavlov@netscape.com